--- a/src/components/Authorization/Authorization.css
+++ b/src/components/Authorization/Authorization.css
@@ -53,7 +53,7 @@
 
 @media screen and (max-width: 768px) {
     .authorization__logo-container {
-        margin-top: 232px;
+        margin-top: 233px;
     }
 }
 
@@ -64,7 +64,7 @@
 }
 
 .authorization__text {
-    margin: 40px 0 40px 0;
+    margin: 38px 0 40px 0;
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
@@ -163,7 +163,8 @@
 }
 
 .authorization__confirm-button {
-    margin: 132px 0 0 0;
+    margin: 0;
+    margin-top: 134px;
     padding-left: 125px;
     padding-right: 125px;
     min-width: 396px;
@@ -180,7 +181,7 @@
 }
 
 .authorization__confirm-button-login {
-    margin-top: 138px;
+    margin-top: 203px;
 }
 
 .authorization__confirm-button:hover {
@@ -193,21 +194,21 @@
         margin-top: 133px;
     }
     .authorization__confirm-button-login {
-        margin-top: 203px;
+        margin-top: 202px;
     }
 }
 
 @media screen and (max-width: 480px) {
     .authorization__confirm-button {
         min-width: 260px;
-        margin-top: 222px;
+        margin-top: 225px;
         padding-left: 68px;
         padding-right: 68px;
         font-size: 12px;
         line-height: 15px;
     }
     .authorization__confirm-button-login {
-        margin-top: 290px;
+        margin-top: 292px;
     }
 }
 
