--- a/src/components/Authorization/Authorization.css
+++ b/src/components/Authorization/Authorization.css
@@ -128,6 +128,7 @@
 
 .authorization__validation-text {
     margin: 6px 0 6px 0;
+    min-height: 12px;
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
