--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -2,7 +2,7 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
 }
 
@@ -15,6 +15,7 @@
 
 @media screen and (max-width: 720px) {
   .movies-card__card {
+    width: 300px;
     min-height: 236px;
   }
 }
@@ -29,7 +30,10 @@
   text-decoration: none;
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 100%;
 }
 
 .movies-card__info {
