--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -3,7 +3,7 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, minmax(300px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(203px, 1fr));
   grid-auto-flow: dense;
   row-gap: 30px;
@@ -11,6 +11,12 @@
   justify-content: center;
 }
 
+
+@media screen and (max-width: 1080px) {
+  .movies-card-list__container {
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+  }
+}
 
 @media screen and (max-width: 768px) {
   .movies-card-list__container {
