--- a/src/components/Authorization/Authorization.css
+++ b/src/components/Authorization/Authorization.css
@@ -273,3 +273,9 @@
         line-height: 15px;
     }
 }
+
+.authorization__confirm-button_disable {
+    background: #F8F8F8;
+    color: #C2C2C2;
+    cursor: none;
+}
